--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,21 @@
 {
     "name": "smart_mvc/smart_mvc",
     "description": "small mvc php framework with php5.6",
-    "authors": [
-        {
-            "name": "Foo",
-            "email": "wcfh07@163.com"
-        }
-    ],
+    "authors": [{
+        "name": "Foo",
+        "email": "wcfh07@163.com"
+    }],
     "minimum-stability": "dev",
     "require": {
         "php": ">= 5.6",
         "qiniu/php-sdk": "^7.0"
     },
-    "require-dev": {
-    },
+    "require-dev": {},
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Library\\":"library/",
-            "Cli\\":"cli/"
+            "Library\\": "library/",
+            "Cli\\": "cli/"
         }
     }
 }
